--- a/index.html
+++ b/index.html
@@ -415,18 +415,19 @@
       </div>
 
       <!-- HORIZONTAL NAV -->
-      <nav class="nav" aria-label="Primary navigation">
-        <a class="active" href="#" data-page="dashboard">Dashboard</a>
-        <a href="#" data-page="contract">Contract</a>
-        <a href="#" data-page="contact">Contact</a>
-        <a href="#" data-page="email">Email Routing</a>
-        <a href="#" data-page="approval">Report &amp; Approval</a>
-        <a href="#" data-page="omni">Omni System</a>
-        <a href="#" data-page="tax">Tax Network</a>
-        <a href="#" data-page="agent">Agent AI</a>
-        <a href="#" data-page="finance">Finance</a>
-        <a href="#" data-page="public">Public Portal</a>
-      </nav>
+      <!-- HORIZONTAL NAV -->
+<nav class="nav" aria-label="Primary navigation">
+  <a class="active" href="index.html">Dashboard</a>
+  <a href="contract.html">Contract</a>
+  <a href="contact.html">Contact</a>
+  <a href="email-routing.html">Email Routing</a>
+  <a href="report-approval.html">Report &amp; Approval</a>
+  <a href="omni-system.html">Omni System</a>
+  <a href="tax-network.html">Tax Network</a>
+  <a href="agent-ai.html">Agent AI</a>
+  <a href="finance.html">Finance</a>
+  <a href="public-portal.html">Public Portal</a>
+</nav>
     </div>
   </div>
 
