--- a/index.html
+++ b/index.html
@@ -415,19 +415,15 @@
       </div>
 
       <!-- HORIZONTAL NAV -->
-      <!-- HORIZONTAL NAV -->
-<nav class="nav" aria-label="Primary navigation">
-  <a class="active" href="index.html">Dashboard</a>
-  <a href="contract.html">Contract</a>
-  <a href="contact.html">Contact</a>
-  <a href="email-routing.html">Email Routing</a>
-  <a href="report-approval.html">Report &amp; Approval</a>
-  <a href="omni-system.html">Omni System</a>
-  <a href="tax-network.html">Tax Network</a>
-  <a href="agent-ai.html">Agent AI</a>
-  <a href="finance.html">Finance</a>
-  <a href="public-portal.html">Public Portal</a>
-</nav>
+      <a href="module.html#contract">Contract</a>
+<a href="module.html#contact">Contact</a>
+<a href="module.html#email">Email Routing</a>
+<a href="module.html#approval">Report &amp; Approval</a>
+<a href="module.html#omni">Omni System</a>
+<a href="module.html#tax">Tax Network</a>
+<a href="module.html#agent">Agent AI</a>
+<a href="module.html#finance">Finance</a>
+<a href="module.html#public">Public Portal</a>
     </div>
   </div>
 
