--- a/index.html
+++ b/index.html
@@ -414,7 +414,9 @@
         </div>
       </div>
 
-      <!-- HORIZONTAL NAV -->   <a href="module.html#contract">Contract</a>
+      <!-- HORIZONTAL NAV -->  
+      
+<a href="module.html#contract">Contract</a>
 <a href="module.html#contact">Contact</a>
 <a href="module.html#email">Email Routing</a>
 <a href="module.html#approval">Report &amp; Approval</a>
