--- a/index.html
+++ b/index.html
@@ -416,16 +416,18 @@
 
       <!-- HORIZONTAL NAV -->  
       
-<a href="module.html#contract">Contract</a>
-<a href="module.html#contact">Contact</a>
-<a href="module.html#email">Email Routing</a>
-<a href="module.html#approval">Report &amp; Approval</a>
-<a href="module.html#omni">Omni System</a>
-<a href="module.html#tax">Tax Network</a>
-<a href="module.html#agent">Agent AI</a>
-<a href="module.html#finance">Finance</a>
-<a href="module.html#public">Public Portal</a>
-    </div>
+<nav class="nav" aria-label="Primary navigation">
+  <a href="./index.html">Dashboard</a>
+  <a href="./contract.html">Contract</a>
+  <a href="./contact.html">Contact</a>
+  <a href="./email.html">Email Routing</a>
+  <a href="./approval.html">Report &amp; Approval</a>
+  <a href="./omni.html">Omni System</a>
+  <a href="./tax.html">Tax Network</a>
+  <a href="./agent.html">Agent AI</a>
+  <a href="./finance.html">Finance</a>
+  <a href="./public.html">Public Portal</a>
+</nav>
   </div>
 
   <main class="wrap">
