--- a/finance.html
+++ b/finance.html
@@ -1,40 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PAGE TITLE • TitanCore</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Finance — TitanCore</title>
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
   <div class="wrap">
 
-    <header class="top">
-      <a class="back" href="index.html">← Back to Dashboard</a>
-      <div class="titleBlock">
-        <div class="title">TitanCore Holdings</div>
-        <div class="sub">PAGE TITLE</div>
-      </div>
-    </header>
+    <nav class="nav" aria-label="Primary navigation">
+      <a href="./index.html">Dashboard</a>
+      <a href="./contract.html">Contract</a>
+      <a href="./contact.html">Contact</a>
+      <a href="./email.html">Email Routing</a>
+      <a href="./approval.html">Report &amp; Approval</a>
+      <a href="./omni.html">Omni System</a>
+      <a href="./tax.html">Tax Network</a>
+      <a href="./agent.html">Agent AI</a>
+      <a class="active" href="./finance.html">Finance</a>
+      <a href="./public.html">Public Portal</a>
+    </nav>
 
-    <main class="grid">
-      <section class="card">
-        <h2>PAGE TITLE</h2>
-        <p>This page is now LIVE. Next we fill it with real content (contracts, calls, emails, approvals, etc.).</p>
-      </section>
-
-      <section class="card">
-        <h2>KPIs</h2>
-        <div class="kpis">
-          <div class="kpi"><div class="k">Total</div><div class="v">—</div></div>
-          <div class="kpi"><div class="k">Pending</div><div class="v">—</div></div>
-          <div class="kpi"><div class="k">Today</div><div class="v">—</div></div>
-          <div class="kpi"><div class="k">Alerts</div><div class="v">—</div></div>
-        </div>
-      </section>
-    </main>
+    <div class="card">
+      <div class="tag">MODULE — Finance</div>
+      <h1>Finance</h1>
+      <p>This page is LIVE. Next we build cash, P&amp;L, budgets, approvals, and company drilldowns.</p>
+      <a class="btn" href="./index.html">← Back to Dashboard</a>
+    </div>
 
   </div>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
