Update and rename tax-network.html to tax.html

--- a/tax.html
+++ b/tax.html
@@ -33,3 +33,14 @@
   <script src="./app.js"></script>
 </body>
 </html>
+    <div class="card">
+      <div class="tag">MODULE — Tax Network</div>
+      <h1>Tax Network</h1>
+      <p>This page is LIVE. Next you’ll tell me exactly how Tax should look, and we build it.</p>
+      <a class="btn" href="./index.html">← Back to Dashboard</a>
+    </div>
+
+  </div>
+  <script src="./app.js"></script>
+</body>
+</html>
