--- a/contact.html
+++ b/contact.html
@@ -1,40 +1,227 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PAGE TITLE • TitanCore</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>TitanCore — Contact Command</title>
+  <link rel="stylesheet" href="./styles.css" />
+  <style>
+    /* local safe layout only for this page */
+    .wrap{max-width:1100px;margin:0 auto;padding:16px}
+    .panel{background:rgba(0,0,0,.35);border:1px solid rgba(212,175,55,.35);border-radius:18px;padding:16px;margin-top:14px}
+    .row{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    @media (max-width:860px){.row{grid-template-columns:1fr}}
+    label{display:block;font-size:13px;opacity:.9;margin-bottom:6px}
+    input,select,textarea{width:100%;padding:12px;border-radius:12px;border:1px solid rgba(212,175,55,.25);background:rgba(10,10,10,.55);color:#eaeaea}
+    textarea{resize:vertical}
+    .kpis{display:grid;grid-template-columns:repeat(4,minmax(0,1fr));gap:10px}
+    @media (max-width:860px){.kpis{grid-template-columns:repeat(2,minmax(0,1fr))}}
+    .kpi{border:1px solid rgba(212,175,55,.25);border-radius:16px;padding:12px;background:rgba(0,0,0,.25)}
+    .k{font-size:12px;opacity:.8;text-transform:uppercase;letter-spacing:.08em}
+    .v{font-size:22px;margin-top:6px;color:#00c853}
+    .btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:999px;border:1px solid rgba(212,175,55,.35);background:rgba(0,0,0,.35);color:#eaeaea;text-decoration:none;cursor:pointer}
+    .btn.primary{border-color:rgba(0,200,83,.55);color:#00c853}
+    .btn.danger{border-color:rgba(255,90,90,.6);color:#ff8a8a}
+    .actions{display:flex;flex-wrap:wrap;gap:10px;margin-top:10px}
+    table{width:100%;border-collapse:separate;border-spacing:0 10px}
+    th{font-size:12px;opacity:.7;text-align:left;padding:0 10px}
+    td{padding:12px 10px;background:rgba(0,0,0,.25);border-top:1px solid rgba(212,175,55,.18);border-bottom:1px solid rgba(212,175,55,.18)}
+    tr td:first-child{border-left:1px solid rgba(212,175,55,.18);border-radius:14px 0 0 14px}
+    tr td:last-child{border-right:1px solid rgba(212,175,55,.18);border-radius:0 14px 14px 0}
+    .tag{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid rgba(0,200,83,.35);color:#00c853;font-size:12px}
+    .muted{opacity:.85}
+  </style>
 </head>
+
 <body>
   <div class="wrap">
 
-    <header class="top">
-      <a class="back" href="index.html">← Back to Dashboard</a>
-      <div class="titleBlock">
-        <div class="title">TitanCore Holdings</div>
-        <div class="sub">PAGE TITLE</div>
+    <!-- NAV -->
+    <nav class="nav" aria-label="Primary navigation">
+      <a href="./index.html">Dashboard</a>
+      <a href="./contract.html">Contract</a>
+      <a class="active" href="./contact.html">Contact</a>
+      <a href="./email.html">Email Routing</a>
+      <a href="./approval.html">Report &amp; Approval</a>
+      <a href="./omni.html">Omni System</a>
+      <a href="./tax.html">Tax Network</a>
+      <a href="./agent.html">Agent AI</a>
+      <a href="./finance.html">Finance</a>
+      <a href="./public.html">Public Portal</a>
+    </nav>
+
+    <!-- HEADER -->
+    <div class="panel">
+      <div class="tag">CONTACT COMMAND</div>
+      <h1 style="margin:10px 0 6px">Calls • Routing • Who’s calling</h1>
+      <div class="muted">Track inbound/outbound calls, caller type (Client/Bank/Institution), and which company it belongs to.</div>
+    </div>
+
+    <!-- KPIs -->
+    <div class="panel">
+      <div class="kpis">
+        <div class="kpi"><div class="k">Inbound Calls</div><div class="v" id="k_in">—</div></div>
+        <div class="kpi"><div class="k">Outbound Calls</div><div class="v" id="k_out">—</div></div>
+        <div class="kpi"><div class="k">Transfers</div><div class="v" id="k_tr">—</div></div>
+        <div class="kpi"><div class="k">Missed / Alerts</div><div class="v" id="k_miss">—</div></div>
       </div>
-    </header>
+    </div>
 
-    <main class="grid">
-      <section class="card">
-        <h2>PAGE TITLE</h2>
-        <p>This page is now LIVE. Next we fill it with real content (contracts, calls, emails, approvals, etc.).</p>
-      </section>
+    <!-- LOG FORM -->
+    <div class="panel">
+      <h2 style="margin:0 0 10px">Log a Call</h2>
 
-      <section class="card">
-        <h2>KPIs</h2>
-        <div class="kpis">
-          <div class="kpi"><div class="k">Total</div><div class="v">—</div></div>
-          <div class="kpi"><div class="k">Pending</div><div class="v">—</div></div>
-          <div class="kpi"><div class="k">Today</div><div class="v">—</div></div>
-          <div class="kpi"><div class="k">Alerts</div><div class="v">—</div></div>
+      <form id="callForm">
+        <div class="row">
+          <div>
+            <label>Direction</label>
+            <select id="f_dir" required>
+              <option value="">Select…</option>
+              <option>Inbound</option>
+              <option>Outbound</option>
+              <option>Transfer</option>
+              <option>Missed</option>
+            </select>
+          </div>
+
+          <div>
+            <label>Caller Type</label>
+            <select id="f_type" required>
+              <option value="">Select…</option>
+              <option>Client</option>
+              <option>Bank</option>
+              <option>Institution</option>
+              <option>Vendor</option>
+              <option>Internal</option>
+            </select>
+          </div>
         </div>
-      </section>
-    </main>
+
+        <div class="row" style="margin-top:10px">
+          <div>
+            <label>Company</label>
+            <select id="f_company" required>
+              <option value="">Select…</option>
+              <option>TitanCore Holdings</option>
+              <option>Vaultara Capital</option>
+              <option>VitalPath Care Group</option>
+              <option>RevMotion Auto &amp; Marine Group</option>
+              <option>Family First Equity Group</option>
+            </select>
+          </div>
+
+          <div>
+            <label>Phone / Name</label>
+            <input id="f_from" placeholder="e.g., +1 (xxx) xxx-xxxx / John Doe" required />
+          </div>
+        </div>
+
+        <div style="margin-top:10px">
+          <label>Reason / Notes</label>
+          <textarea id="f_notes" rows="3" placeholder="What was the call about? Any action needed?"></textarea>
+        </div>
+
+        <div class="actions">
+          <button class="btn primary" type="submit">Add Call</button>
+          <button class="btn" type="button" id="btn_seed">Load Sample</button>
+          <button class="btn danger" type="button" id="btn_clear">Clear</button>
+        </div>
+      </form>
+    </div>
+
+    <!-- CALL LOG TABLE -->
+    <div class="panel">
+      <h2 style="margin:0 0 10px">Call Log</h2>
+      <table aria-label="Call log table">
+        <thead>
+          <tr>
+            <th>Time</th>
+            <th>Direction</th>
+            <th>Type</th>
+            <th>Company</th>
+            <th>From</th>
+            <th>Notes</th>
+          </tr>
+        </thead>
+        <tbody id="logBody"></tbody>
+      </table>
+    </div>
 
   </div>
-  <script src="app.js"></script>
+
+  <script>
+    const KEY = "tc_call_log";
+
+    function nowStamp(){
+      const d = new Date();
+      return d.toLocaleString();
+    }
+    function load(){ return JSON.parse(localStorage.getItem(KEY) || "[]"); }
+    function save(list){ localStorage.setItem(KEY, JSON.stringify(list)); }
+
+    function render(){
+      const list = load();
+      const body = document.getElementById("logBody");
+      body.innerHTML = "";
+
+      let inbound=0,outbound=0,transfer=0,missed=0;
+
+      list.forEach(item=>{
+        if(item.dir==="Inbound") inbound++;
+        if(item.dir==="Outbound") outbound++;
+        if(item.dir==="Transfer") transfer++;
+        if(item.dir==="Missed") missed++;
+
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${item.time}</td>
+          <td>${item.dir}</td>
+          <td>${item.type}</td>
+          <td>${item.company}</td>
+          <td>${item.from}</td>
+          <td>${item.notes || ""}</td>
+        `;
+        body.appendChild(tr);
+      });
+
+      document.getElementById("k_in").textContent  = inbound  || "—";
+      document.getElementById("k_out").textContent = outbound || "—";
+      document.getElementById("k_tr").textContent  = transfer || "—";
+      document.getElementById("k_miss").textContent= missed   || "—";
+    }
+
+    document.getElementById("callForm").addEventListener("submit", (e)=>{
+      e.preventDefault();
+      const list = load();
+      list.unshift({
+        time: nowStamp(),
+        dir: document.getElementById("f_dir").value,
+        type: document.getElementById("f_type").value,
+        company: document.getElementById("f_company").value,
+        from: document.getElementById("f_from").value,
+        notes: document.getElementById("f_notes").value
+      });
+      save(list);
+      e.target.reset();
+      render();
+    });
+
+    document.getElementById("btn_seed").addEventListener("click", ()=>{
+      const sample = [
+        {time: nowStamp(), dir:"Inbound", type:"Client", company:"Vaultara Capital", from:"+1 555-0101 / Client", notes:"Asked about investment onboarding."},
+        {time: nowStamp(), dir:"Inbound", type:"Bank", company:"TitanCore Holdings", from:"+1 555-0202 / Bank", notes:"Requested updated docs for facility."},
+        {time: nowStamp(), dir:"Transfer", type:"Institution", company:"Family First Equity Group", from:"+1 555-0303 / Institution", notes:"Transferred to subsidiary team."},
+      ];
+      save(sample);
+      render();
+    });
+
+    document.getElementById("btn_clear").addEventListener("click", ()=>{
+      save([]);
+      render();
+    });
+
+    render();
+  </script>
 </body>
 </html>
